--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "browser": "dist/client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel lib -d dist && chmod +x ./dist/cli.js",
+    "build": "babel lib -d dist",
     "dev": "babel -w lib -d dist",
     "prepublish": "npm run build",
     "cli": "node ./dist/cli.js"
@@ -50,6 +50,7 @@
     "bluebird": "^3.4.6",
     "chokidar": "^1.6.1",
     "commander": "^2.9.0",
+    "cors": "^2.8.4",
     "deepmerge": "^1.3.1",
     "express": "^4.14.0",
     "graceful-fs": "^4.1.11",
